Updated from Publii

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
 					var s = document.getElementsByTagName('script')[0];
 					s.parentNode.insertBefore(gcse, s);
 				})();</script><gcse:searchresults-only></gcse:searchresults-only></div></div></main><footer class="footer"><div class="footer__copyright">Copyright 2020 SqidzInk</div></footer><script>window.publiiThemeMenuConfig = {    
-      mobileMenuMode: 'sidebar',
+      mobileMenuMode: 'overlay',
       animationSpeed: 300,
       submenuWidth: 'auto',
       doubleClickTime: 500,
@@ -23,4 +23,4 @@
                   this.classList.add('is-loaded');
                }, false);
          }
-      }</script></body></html>
+      }</script><script id="dsq-count-scr" src="https://squidz1nk.disqus.com/count.js" async></script></body></html>
